--- a/client/src/pages/ChatPage.css
+++ b/client/src/pages/ChatPage.css
@@ -848,7 +848,6 @@
 }
 
 .chat-item {
-    /*padding: 20px;*/
     margin: 8px 0;
     border-radius: 16px;
     background: var(--bg-tertiary);
@@ -937,7 +936,6 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    margin-bottom: 8px;
 }
 
 .chat-header strong {
@@ -1018,7 +1016,7 @@
 .chats-list {
     max-height: calc(100vh - 300px);
     overflow-y: auto;
-    padding: 0 8px;
+    /*padding: 0 8px;*/
     margin-top: 8px;
 }
 
